Sat Sep 02 02:31:03 2000  Iain Holmes <terrorist@gegl.org>

	* gnome-about.c (gnome_about_init): Allocate the _priv structure.
	Neatened all the functions up. Fix memory leaks. Removed needs
	for AboutInfo structure.

	* gnome-animator.c: Added GParams.

	* gtk-clock.c (gtk_clock_new): Calls gtk_clock_construct.

	* stock-demo.c: Help menu not right justified.

	* gnome-app.c (gnome_app_set_help_view_orientation): Something wrong
	with the callback, so use the dock-items orientation value instead.

	* gnome-helpsys.c: Use wap-textfu instead of textfu.
	(help_view_select_help_cb): Removed grab, set cursor to WHATISIT,
	removed sanity check. Fixed a leak too.

	* wap-textfu.[ch]: Replacements for gnome-textfu. Need renamed once
	they work to gnome-textfu.[ch].

Sat Sep 02 03:25:46 2000  George Lebl <jirka@5z.com>

	* gnome-druid.c: Eek, yet more minor fixes.  close_on_cancel
	  now works properly.  Also kill the window when the druid
	  is destroyed so that we don't require the caller to actually
	  keep an extra pointer around.  This is just sugar, things like
	  this are allowed.

Sat Sep 02 03:12:20 2000  George Lebl <jirka@5z.com>

	* gnome-druid.c: improve docs for append/prepend/insert

Sat Sep 02 01:57:10 2000  George Lebl <jirka@5z.com>

	* gnome-druid.[ch]: Add some sugar API.  Normally a druid is inside
	  a window, so there is now a gnome_druid_new_with_window function
	  which does this and a few other minor things for you.  Also
	  document the _new function.

	* gnome-helpsys.c: Eek, forgot to commit this earlier.  This uses
	  GError for the gnome_url functions now.

Fri Sep 01 03:33:09 2000  George Lebl <jirka@5z.com>

	* *.h:  All _get_type functions are now G_GNUC_CONST to make
	  things just a tad better optimized on gcc.

Fri Sep 01 02:58:58 2000  George Lebl <jirka@5z.com>

	* gnome-animator.c: fix memory leaks, remove old FIXMEs and minor
	  cleanup

	* gnome-druid.c: Make sure the non-visible button is never the
	  default one.
